[gd_scene load_steps=9 format=3 uid="uid://dxwe5ub34ewnx"]

[ext_resource type="Texture2D" uid="uid://dxhhwv68vb8du" path="res://assets/sprites/main menu.png" id="1_brnl1"]
[ext_resource type="Script" uid="uid://byvsaasdm6ww7" path="res://scripts/main_menu.gd" id="1_qqsp2"]
[ext_resource type="FontFile" uid="uid://l66ubgv68oql" path="res://assets/sprites/GrapeSoda.ttf" id="2_cyejb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cyejb"]
texture = ExtResource("1_brnl1")
modulate_color = Color(0.466181, 0.466181, 0.466181, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cyejb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cyejb"]
bg_color = Color(0.800491, 0.800491, 0.800491, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 4
shadow_offset = Vector2(0.5, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqsp2"]
bg_color = Color(0.601223, 0.601223, 0.601223, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 4
shadow_offset = Vector2(0.5, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qop8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 4
shadow_offset = Vector2(0.5, 2)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qqsp2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_cyejb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.5
offset_top = 8.0
offset_right = 142.5
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cyejb")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_cyejb")
theme_override_styles/hover = SubResource("StyleBoxFlat_cyejb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qqsp2")
theme_override_styles/normal = SubResource("StyleBoxFlat_0qop8")
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cyejb")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_cyejb")
theme_override_styles/hover = SubResource("StyleBoxFlat_cyejb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qqsp2")
theme_override_styles/normal = SubResource("StyleBoxFlat_0qop8")
text = "Load"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cyejb")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_cyejb")
theme_override_styles/hover = SubResource("StyleBoxFlat_cyejb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qqsp2")
theme_override_styles/normal = SubResource("StyleBoxFlat_0qop8")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -200.0
offset_right = 114.0
offset_bottom = -177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_cyejb")
theme_override_font_sizes/font_size = 100
text = "A 2D RPG 
GUARDIAN OF NATURE"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
